[package]
name = "binance-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.14", features = ["rustls-tls"]}
url = "2.1.0"
tracing = "*"
tracing-subscriber = "*"